fix text spans to prevent jumping text while dragging
- add markup to js output
- fix span width css

--- a/app/assets/stylesheets/application/_timetable.css.scss
+++ b/app/assets/stylesheets/application/_timetable.css.scss
@@ -126,6 +126,10 @@
       right: 0;
       top: 2px;
       text-align: center;
+      span {
+        display: inline-block;
+        width: 40px;
+      }
     }
     .comment-text {
       position: absolute;
